<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tools_box_bg"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/llRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.lgq.rssreader.controls.RoundedImageView
            android:id="@+id/headImageView"
            android:layout_width="146dip"
            android:layout_height="146dip"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="25.0dip"
            android:layout_marginTop="75.0dip"
            android:adjustViewBounds="true"
            android:maxHeight="200dip"
            android:maxWidth="200dip"
            android:minHeight="150dip"
            android:minWidth="150dip"            
            android:src="@drawable/head_default_yixin" />

        <!--
        <View android:background ="#ff1c1c1b" android:layout_width ="fill_parent" android:layout_height ="1.3299866dip" />
        <View android:background ="#ff474745" android:layout_width ="fill_parent" android:layout_height ="1.0px" />
        -->

        <TextView
            android:id="@+id/nickNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:textColor="#ffccccc6"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/tools_box_invite_btn_selector"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="#ff999994"
            android:textSize="12.0sp" />

        <TextView
            android:id="@+id/yixinCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="6.0dip"
            android:textColor="#ffa8a8a3"
            android:textSize="12.0sp" />

        <RelativeLayout
            android:id="@+id/account"
            android:layout_width="fill_parent"
            android:layout_height="65.0dip"
            android:background="@drawable/tool_box_fragment_bg_selector" >

            <TextView
                android:id="@+id/accountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21.0dip"
                android:drawablePadding="20.0dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/google"
                android:textColor="#ffccccc6"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/tool_box_fragment_yixin_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/download"
            android:layout_width="fill_parent"
            android:layout_height="65.0dip"
            android:background="@drawable/tool_box_fragment_bg_selector" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21.0dip"
                android:drawablePadding="20.0dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/offlinedownload"
                android:textColor="#ffccccc6"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/tool_box_download_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add"
            android:layout_width="fill_parent"
            android:layout_height="65.0dip"
            android:background="@drawable/tool_box_fragment_bg_selector" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21.0dip"
                android:drawablePadding="20.0dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/add"
                android:textColor="#ffccccc6"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/tool_box_fragment_add_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="65.0dip"
            android:background="@drawable/tool_box_fragment_bg_selector" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21.0dip"
                android:drawablePadding="20.0dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/search"
                android:textColor="#ffccccc6"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/tool_box_fragment_search_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="65.0dip"
            android:background="@drawable/tool_box_fragment_bg_selector" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21.0dip"
                android:drawablePadding="20.0dip"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/settings"
                android:textColor="#ffccccc6"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:contentDescription="@string/empty"
                android:src="@drawable/tool_box_fragment_settings_icon" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
<!--
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blog_list"
    android:name="com.lgq.rssreader.FeedListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".BlogListActivity"
    tools:layout="@android:layout/list_content" />
-->
